issue tracker at https://oodt.jpl.nasa.gov/jira/browse/CA.


1.3.6 — TBD
-----------

• CA-1492 - Involved investigator sites not appearing on protocols
• Fixed biomuta default data source to point to new location.
• CA-1525: RDF Server needs to provide current employment status on person feed
• CA-1526: Provide site ID in publications RDF


1.3.5 — Upgrades
----------------

• Added an upgrade step to enable Biomuta RDF ingestion.


1.3.4 — Biomuta
---------------

• Added Biomuta RDF ingestion system and source.


1.3.3 — Predicates and Packaging
--------------------------------

• Fix predicate URIs for EDRN title and account name.
• Obey PyPI's new restrictions on package hosting, PEP-470.
• Added Biomuta RDF generator and source.
• Upgrade for Travis-CI container & caching mechanisms.


1.3.2 — Ontology 1.8
--------------------

This release sets up additional predicate handlers and is compatible with the
SOAP Ontology API 1.8.


1.3.1 — I Had Some Chicken; Pass the FLOSS
------------------------------------------

This package is now free, open source software under the Apache License v2.


1.3.0 — Texas-Sized
-------------------

• Compatible with RDFLib 4.0.1
• Compatible with Plone 4.3.2
• Compatible with zc.buildout 2.2.1
• Compatible with EDRN Ontology 1.8
• Compatible with DMCC Web Services (test tier) as of 20140401


1.2.3 — Protocols Without Publications
--------------------------------------

The DMCC's SOAP service always lists a slot for publications even when a
protocol has no publications.  But in RDF, we don't want make any statement
about publications when there aren't any.  This release addresses that.


1.2.2 — Upgrades
----------------

This release addresses the following:

* Compatible with RDFLib 3.2.3
* Compatible with Plone 4.2.2


1.2.1 — Links
-------------

This release addresses the following:

* CA-1031 - New RDF server fails to link protocols correctly


1.2.0 — Webbed
--------------
